# stratsquad

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/: BriefRenderer.tsx  QAMode.tsx  globals.css  layout.tsx  page.tsx
corpus/: sea-mobile-2025.md  timi-context.md
data/: chunks.json  embeddings.json
eval/: labeled.json  results.md
lib/: deepseek.ts  pipeline.ts  stream.ts  types.ts
lib/agents/: _run.ts  competitor.ts  composer.ts  judge.ts  market.ts  orchestrator.ts  risk.ts  trend.ts
lib/icons/: brands.tsx
mcp/: server.ts
scripts/: embed.ts  eval.ts  ingest.ts
server/: .env.example  Dockerfile  README.md  modal_deploy.py  pyproject.toml
server/corpus/: china-version-policy.md  moba-category.md  payment-localization.md
server/data/: chunks.json
server/data/preset/: steam-games.json
server/eval/: results.md
server/scripts/: build_steam_preset.py  build_wiki_preset.py
server/stratsquad/: __init__.py  agent_runtime.py  graph.py  llm.py  main.py  sse.py  state.py  types.py
server/stratsquad/nodes/: composer.py  experts.py  judge.py  orchestrator.py  retrieve.py  trend_dispatch.py
server/stratsquad/preset/: registry.py  steam.py  wikipedia.py
server/stratsquad/qa/: graph.py  tools.py
server/stratsquad/rag/: chunk.py  embed.py  rerank.py  retrieve.py  store.py
server/stratsquad/trends/: appstore.py  base.py  bilibili.py  dispatch.py  douyu.py  google_trends.py  huya.py  planner.py  reddit.py  steam.py  twitch.py  youtube.py
(+24 files in other folders)
